--- a/task2/try.html
+++ b/task2/try.html
@@ -49,6 +49,8 @@
         var videoTracks = stream.getVideoTracks();
         console.log('Got stream with constraints:', constraints);
         console.log('Using video device: ' + videoTracks[0].label);
+        //var video = document.createElement('video');
+        //container.insertBefore(video, )
         stream.oninactive = function() {
             console.log('Stream inactive');
         };
